2007-02-12  Zsolt Foldvari  <zfoldvar@users.sourceforge.net>
	* src/MarkupText.py: improvements
	* src/RelLib/_Note.py (get): try to remove tags only if note is
	formatted
	* src/DisplayTabs/_NoteTab.py: cleanup

2007-02-11  Brian Matherly  <brian@gramps-project.org>
	* src/BaseDoc.py: remove write_at
	* src/docgen/PSDrawDoc.py: remove write_at
	* src/docgen/SvgDrawDoc.py: remove write_at, add center_text
	* src/docgen/OpenOfficeDoc.py: remove write_at
	* src/docgen/PdfDoc.py: remove write_at
	* src/docgen/GtkPrint.py: remove write_at
	* src/plugins/StatisticsChart.py: pass draw style to legend
	* src/docgen/LPRDoc.py: remove write_at
	* src/docgen/ODFDoc.py: remove write_at
	* src/ReportBase/_ReportUtils.py

2007-02-11  Don Allingham  <don@gramps-project.org>
	* src/Merge/_MergePlace.py: merge from 2.2 tree
	* src/GrampsDbUtils/_GedcomParse.py: parsing improvements
	* src/GrampsDbUtils/_GedcomLex.py: parsing improvements

2007-02-10  Don Allingham  <don@gramps-project.org>
	* src/GrampsDb/_GrampsGEDDB.py: new GEDCOM parser module
	* src/RelLib/_BaseObject.py: new GEDCOM parser module
	* src/RelLib/_AttributeBase.py: new GEDCOM parser module
	* src/plugins/PHPGedViewConnector.py: new GEDCOM parser module
	* src/GrampsDbUtils/_GedcomParse.py: new GEDCOM parser module
	* src/GrampsDbUtils/__init__.py: new GEDCOM parser module
	* src/GrampsDbUtils/_GedcomLex.py: new GEDCOM parser module
	* src/GrampsDbUtils/_GrampsDbWRFactories.py: new GEDCOM parser module
	* src/GrampsDbUtils/_GedcomTokens.py: renamed from _GedTokens.py
	* src/GrampsDbUtils/Makefile.am: new GEDCOM parser module
	* src/ArgHandler.py: new GEDCOM parser module
	* example/gedcom/sample.ged: added test cases

2007-02-10  Brian Matherly  <brian@gramps-project.org>
	* src/BaseDoc.py: remove unused functions
	* src/docgen/KwordDoc.py: remove unused functions
	* src/docgen/OpenOfficeDoc.py: remove unused functions
	* src/docgen/HtmlDoc.py: remove unused functions